--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         </div>
 
         <div class="row justify-content-center" style="margin-bottom: 2rem;">
-            <div class="col-md-4">
+            <div class="col-lg-4">
                 <div class="partner">
                     <h1>Hackathon Season Partner</h1>
                     <img src="images/MLH.svg" alt="">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-lg-6">
                 <div class="titlePartner">
                     <div class="partner">
                         <h1>Title Partner</h1>
@@ -50,7 +50,7 @@
                 <h1 class="text-center font-weight-bold heading" style="color: #fff;">Mentors</h1>
             </div>
         </div>
-        <div class="row justify-content-center" id="dynamicCards" style="background-color: #000000;">
+        <div class="row" id="dynamicCards" style="background-color: #000000;">
             <!-- <div class="col-md-2 cardWrapper">
                 <div class="mentorCard">
                     <div class="mentorImage">
