--- a/index.html
+++ b/index.html
@@ -47,45 +47,38 @@
 
         <div class="row justify-content-center" style="background-color: #000000;">
             <div class="col-md-12">
-                <h1 class="text-center font-weight-bold heading" style="color: #fff;">Mentors</h1>
+                <h1 class="text-center font-weight-bold heading" style="color: #fff;">Organizers</h1>
             </div>
         </div>
-        <div class="row" id="dynamicCards" style="background-color: #000000;">
-            <!-- <div class="col-md-2 cardWrapper">
+        <div class="row justify-content-center" id="dynamicCards" style="background-color: #000000;">
+            <!-- <div class="col-lg-3 cardWrapper">
                 <div class="mentorCard">
                     <div class="mentorImage">
                         <img src="images/mentors/anush.png" alt="">
-                    </div>
-                    <div class="mentorText">
-                        <h1 class="text-center">Anush Bhatia</h1>
                         <a href="#">
                             <div class="linkedin">
                                 <i class="fab fa-linkedin-in"></i>
                             </div>
                         </a>
                     </div>
-                    <div class="mentorSkills">
-                        <span class="pink">UI/UX</span>
-                        <span class="green">Cloud</span>
+                    <div class="mentorText align-middle">
+                        <h1 class="text-center">Anush Bhatia</h1>
+                        <h2 class="text-center">- Creatives Lead</h2>
                     </div>
+
                 </div>
             </div>
-            <div class="col-md-2 cardWrapper">
+            <div class="col-lg-3 cardWrapper">
                 <div class="mentorCard">
                     <div class="mentorImage">
                         <img src="images/mentors/smaranjit.png" alt="">
                     </div>
                     <div class="mentorText">
                         <h1 class="text-center">Smaranjit Ghose</h1>
+                        <h2 class="text-center">- Technical Lead</h2>
                         <div class="linkedin">
                             <i class="fab fa-linkedin-in"></i>
                         </div>
-                    </div>
-                    <div class="mentorSkills">
-                        <span class="pink">Python</span>
-                        <span class="green">AI/ML</span>
-                        <div class="break"></div>
-                        <span class="yellow">CV</span>
                     </div>
                 </div>
             </div> -->
