--- a/index.html
+++ b/index.html
@@ -7,11 +7,78 @@
     <title>Hack Chennai</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4e9a685ceb.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="container-fluid">
+
+        <!-- ! About Us  -->
+        <div class="row about">
+            <div class="col-12">
+                <h1 class="text-center font-weight-bold heading text-light">About Us</h1>
+            </div>
+
+
+            <div class="row justify-content-center info text-light">
+                <div class="col-lg-12 question">
+                    <h2>What is Hack Chennai?🤔</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia sint minima architecto aliquid, voluptates blanditiis ullam eaque quod quasi at itaque consequatur ab, soluta quidem perferendis aspernatur quo fugiat similique.
+                    </p>
+                </div>
+                <div class="col-lg-12 question">
+                    <h2>Why Hack Chennai?💬</h2>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illum aperiam, repellendus quas praesentium minus omnis dolores. Ex quis pariatur ipsa.
+                    </p>
+                </div>
+                <div class="col-lg-12 question">
+                    <h2>How much does it cost?💲</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo magnam ipsa soluta deleniti saepe reprehenderit nobis accusamus omnis nihil eaque.
+                    </p>
+                </div>
+                <div class="col-lg-12 question">
+                    <h2>What are the tracks for Hack Chennai?💻</h2>
+                    <p>Themes
+                        <ul>
+                            <li>Sustainable Development</li>
+                            <li>Woman Safety</li>
+                            <li>Disaster Management</li>
+                            <li>Mining</li>
+                            <li>Healthcare</li>
+                        </ul>
+                    </p>
+                </div>
+                <div class="col-lg-12 question">
+                    <h2>Can students Attend?😎</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus aliquid voluptas porro odit neque, quos numquam impedit? Molestiae, asperiores et.
+                    </p>
+                </div>
+                <div class="col-lg-12 question">
+                    <h2>Code of Conduct?📄</h2>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. A facere odio iure perferendis iste itaque ipsam neque sunt rerum reprehenderit.
+                    </p>
+                </div>
+                <div class="col-lg-12 question">
+                    <h2>
+                        Why is HackChennai for you or why should you participate in it?🥳
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error tempore accusantium a temporibus porro natus sequi voluptate aut, magni deserunt.
+                    </p>
+                </div>
+            </div>
+
+
+        </div>
+
+
+
 
         <div class="row">
             <div class="col-12">
