landing and navbar

--- a/index.html
+++ b/index.html
@@ -7,11 +7,55 @@
     <title>Hack Chennai</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4e9a685ceb.js" crossorigin="anonymous"></script>
+    <!-- fontaweesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- material-icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="css/landing.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- navbar -->
+    <div class="topnav" id="myTopnav">
+        <a href="#home" id="hack" class="active">
+            <div class="navLogo">
+                <h1>HACK</h1>
+                <h2>CHENNAI</h2>
+            </div>
+        </a>
+        <a href="#about">Organizers</a>
+        <a href="#news">Mentors</a>
+        <a href="#contact">Sponsors</a>
+        <a href="#about">About Us</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+        </a>
+    </div>
+
+    <div class="header">
+        <div class="content">
+            <div class="dates">
+                <p>14th-15th AUGUST</p>
+            </div>
+            <div class="landingHeading">
+                <h1>Are You Ready For Hack Chennai? 🎉</h1>
+                <p>Virtual Hackathon Loading<span id="wait"></span></p>
+            </div>
+            <div class="devfolio">
+                <a href="#">
+                    <button type="button" class="btn btn-dark devfolioBtn">Apply on Dev DevFolio</button>
+                    <i class="fas fa-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+        <div class="display">
+            <img src="./images/code.svg" alt="">
+        </div>
+
+    </div>
+
     <div class="container-fluid">
 
         <!-- ! About Us  -->
