--- a/index.html
+++ b/index.html
@@ -156,9 +156,10 @@
             </div>
         </div>
 
+        <!-- Mentors -->
         <div class="row justify-content-center" style="background-color: #000000;">
             <div class="col-md-12">
-                <h1 class="text-center font-weight-bold heading" style="color: #fff;">Organizers</h1>
+                <h1 class="text-center font-weight-bold heading" style="color: #fff;">Mentors</h1>
             </div>
         </div>
         <div class="row justify-content-center" id="dynamicCards" style="background-color: #000000;">
@@ -172,35 +173,140 @@
                             </div>
                         </a>
                     </div>
-                    <div class="mentorText align-middle">
+                    <div class="mentorText">
                         <h1 class="text-center">Anush Bhatia</h1>
-                        <h2 class="text-center">- Creatives Lead</h2>
+                        <div class="skills">
+                            <h1 class="pink">UI/UX</h1>
+                            <h1 class="green">CLOUD</h1>
+                        </div>
                     </div>
-
                 </div>
             </div>
             <div class="col-lg-3 cardWrapper">
                 <div class="mentorCard">
                     <div class="mentorImage">
                         <img src="images/mentors/smaranjit.png" alt="">
+                        <a href="#">
+                            <div class="linkedin">
+                                <i class="fab fa-linkedin-in"></i>
+                            </div>
+                        </a>
                     </div>
                     <div class="mentorText">
                         <h1 class="text-center">Smaranjit Ghose</h1>
-                        <h2 class="text-center">- Technical Lead</h2>
-                        <div class="linkedin">
-                            <i class="fab fa-linkedin-in"></i>
+                        <div class="skills">
+                            <h1 class="pink">PYTHON</h1>
+                            <h1 class="green">AI/ML</h1>
+                            <h1 class="yellow">COMPUTER VISION</h1>
                         </div>
                     </div>
                 </div>
             </div> -->
         </div>
+
+
+        <!-- Team -->
+        <div class="row justify-content-center">
+            <div class="col-md-12">
+                <h1 class="text-center font-weight-bold heading">Team</h1>
+            </div>
+        </div>
+        <div class="row justify-content-center" id="teamCards">
+            <!-- <div class="col-lg-3 cardWrapper">
+                <div class="teamCard ">
+                    <div class="teamImage ">
+                        <img src="images/mentors/naruto.webp " alt=" ">
+                    </div>
+                    <div class="teamText ">
+                        <h1>Aaishika S Bhattacharya</h1>
+                        <h2>Team Lead</h2>
+                    </div>
+                    <div class="teamLinks ">
+                        <a href="# ">
+                            <div class="teamLinkedin ">
+                                <img src="images/linkedin.svg " alt=" ">
+                            </div>
+                        </a>
+                        <a href="# ">
+                            <div class="teamGithub ">
+                                <img src="images/github.svg " alt=" ">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div> -->
+        </div>
+
+        <!-- Countdown -->
+        <div class="row justify-content-center" style="background-color: #f7f7f7;">
+            <div class="col-md-12">
+                <h1 class="text-center heading">Starting Soon!!</h1>
+            </div>
+        </div>
+        <div class="row justify-content-center" style="background-color: #f7f7f7;">
+            <div class="col-lg-12 chennai">
+                <img src="images/chennai.svg" alt="">
+            </div>
+            <div class="col-lg-12 timer">
+                <div id="clockdiv">
+                    <div>
+                        <span class="days"></span>
+                        <div class="smalltext" style="color: #cd0000;">Days</div>
+                    </div>
+                    <div>
+                        <span class="hours"></span>
+                        <div class="smalltext" style="color: #e9c71a;">Hours</div>
+                    </div>
+                    <div>
+                        <span class="minutes"></span>
+                        <div class="smalltext" style="color: #00ad10;">Minutes</div>
+                    </div>
+                    <div>
+                        <span class="seconds"></span>
+                        <div class="smalltext" style="color: #2d0ae6;">Seconds</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row" style="background-color: #000000;">
+            <footer class="footer">
+                <div class="links">
+                    <a href="">
+                        <img id="mail" src="images/mail.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img id="linked" src="images/linkedin.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img id="insta" src="images/instagram.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img id="slack" src="images/slack.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img id="twitter" src="images/twitter.svg" alt="">
+                    </a>
+                    <a href="">
+                        <img id="git" src="images/github.svg" alt="">
+                    </a>
+                </div>
+                <div class="text">
+                    <h1>
+                        Contact us: support@hackchennai.com
+                    </h1>
+                </div>
+            </footer>
+        </div>
+
+
     </div>
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js " integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js " integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI " crossorigin="anonymous "></script>
+    <script src="js/script.js "></script>
 </body>
 
 </html>
