--- a/index.html
+++ b/index.html
@@ -121,16 +121,20 @@
 
         </div>
 
-
-
-
-        <div class="row">
+        <!-- Sponsors -->
+        <div class="row justify-content-center">
             <div class="col-12">
                 <h1 class="text-center font-weight-bold heading">Sponsors</h1>
             </div>
-            <div class="col-12 text-center sponsor">
+            <div class="col-lg-3 text-center sponsor">
                 <a href="#">
                     <button type="button" class="btn btn-dark sponsorBtn">Become A Sponsor</button>
+                </a>
+                <div class="btnBorder"></div>
+            </div>
+            <div class="col-lg-3 text-center sponsor">
+                <a href="#">
+                    <button type="button" class="btn btn-dark sponsorBtn">Become A Speaker</button>
                 </a>
                 <div class="btnBorder"></div>
             </div>
