--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="India's Biggest Student Held Virtual Hackathon">
     <meta property="og:description" content="Hack Chennai is a community-focused virtual Hackathon, designed especially for the needs of the communities, with problem statements centered around the community itself. Whether you are a beginner or an expert, here is the perfect chance to hone and show your skills and witness the competitive yet inclusive developer community around you!">
-    <meta property="og:image" content="https://nifty-borg-c353ac.netlify.app/images/og.png">
+    <meta property="og:image" itemprop="image" content="https://nifty-borg-c353ac.netlify.app/images/og.png">
     <meta property="og:url" content="https://nifty-borg-c353ac.netlify.app/">
+    <meta property="type" content="website">
     <title>Hack Chennai</title>
     <link rel="icon" type="image/svg" href="images/hackathalon.svg">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
